# memhack

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: memory.hxx  util.hxx
src/: CMakeLists.txt  main.cxx  memory.cxx  util.cxx
